--- a/src/index.css
+++ b/src/index.css
@@ -5,52 +5,7 @@
 
 #body{
   margin-top: 10px;
-}
-
-#banner{
-  padding: 0 17px;
-}
-
-#navigation{
-  display: flex;
-  justify-content: space-between;
-  align-items: center
-}
-
-#hidden-menu{
-  border-radius: 30px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  padding: 2px 10px;
-  background-color: #ffffff;
-  border: 1px solid #778599;
-} 
-
-#menu {
-  display: flex;
-  overflow-x: auto; 
-}
-
-#menu button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  background: none;
-  cursor: pointer;
-  padding-right: 20px;
-  padding-top: 15px;
-  white-space: nowrap;  
-}
-
-.img-menu {
-  padding: 10px;
-}
-
-#menu button svg {
-  margin-right: 5px; 
-  padding: 10px;
+  font-family: "Figtree", sans-serif;
 }
 
 #radar{
