--- a/src/Components/menu/Menu.css
+++ b/src/Components/menu/Menu.css
@@ -1,7 +1,28 @@
 #navigation{
   display: flex;
   justify-content: space-between;
-  align-items: center
+  align-items: center;
+}
+
+#search{
+  display: flex;
+  align-items: center;
+}
+
+#search > button{  
+  transition: color 0.3s ease; 
+  cursor: pointer;
+
+}
+
+#search button:hover {
+  color: #cd3e8e; 
+}
+
+.unset-button{
+  padding-right: 30px;
+  background-color: #ffffff;  
+  border: none;
 }
 
 #hidden-menu{
@@ -14,9 +35,14 @@
   border: 1px solid #778599;
 } 
 
+#hidden-menu:hover {
+  border: 1px solid #cd3e8e;
+}
+
 #menu {
   display: flex;
-  overflow-x: auto; 
+  background-color: #ffffff;
+  width: 100%;
 }
 
 #menu button {
@@ -29,6 +55,12 @@
   padding-right: 20px;
   padding-top: 15px;
   white-space: nowrap;  
+  transition: color 0.3s ease; /* Animação suave na troca de cor */
+  color: #333;
+}
+
+#menu button:hover {
+  color: #cd3e8e; /* Cor ao passar o mouse (altere conforme desejado) */
 }
 
 .img-menu {
