--- a/src/media-query.css
+++ b/src/media-query.css
@@ -2,6 +2,7 @@
 
 @media screen and (max-width: 768px) {
    #Banner-principal > img {
+    background-color: black;
     width: 100%;      
     height: auto;     
     max-width: 100%;   
@@ -34,10 +35,16 @@
   }
 }
 
-
 @media screen and (min-width: 768px) and (max-width: 894px) {
 
+  #Travel-cards-section #cards{
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px; 
+  }
+
   #advertisement{
+    background-color: aqua;
     width: 100%;
     max-width: 730px;
     margin: 30px 0px;
@@ -78,24 +85,23 @@
 }
 
 @media screen and (min-width: 894px) and (max-width: 1200px){
-  #menu{
-    padding: 0 80px;
-  }
-
   #navigation{
     padding: 0 80px;
   }
 
+  #menu{
+    padding: 0 80px;
+  }
 
   #Banner-principal{
     padding: 0 80px;
   }
 
-  #Travel-cards-section{
+  #body #Travel-cards-section{
     padding: 0 80px;
   }
   
-  #cards{
+  #Travel-cards-section #cards{
     display: grid; 
     grid-template-columns: repeat(3, 1fr);
     gap: 20px; 
@@ -158,11 +164,11 @@
     padding: 0 200px;
   }
 
-  #Travel-cards-section{
+  #body #Travel-cards-section{
     padding: 0 200px;
   }
   
-  #cards{
+  #Travel-cards-section #cards{
     display: grid; 
     grid-template-columns: repeat(4, 1fr);
     gap: 20px; 
