--- a/src/Components/travel-cards/TravelCards.css
+++ b/src/Components/travel-cards/TravelCards.css
@@ -2,13 +2,13 @@
   padding: 0 17px;
 }
 
-#Travel-cards-section > h3{
+#Travel-cards-section > p{
   font-size: 15px;
   padding-top: 30px;
 }
 
 #Travel-cards-section > h2{
-  font-size: 30px;
+  font-size: 25px;
   padding-bottom: 20px;
 }
 
