--- a/src/Components/footer/Footer.css
+++ b/src/Components/footer/Footer.css
@@ -17,6 +17,9 @@ padding: 10px;
   display: flex;
   gap: 15px;
   justify-content: center;
+  margin: 20px 0px;
+  font-size: 2px;
+  color: #949fa4;
 }
 
 #footer-menu{
@@ -25,4 +28,16 @@ font-size: 15px;
 
 #invisible-menu{
   padding-left: 30px;
+}
+
+.linha{
+  margin: 20px 200px;
+  border-bottom: 5px solid #e2e8f0;
+}
+
+#about-footer{
+  display: grid;
+  grid-template-columns: minmax(400px, 2fr) 1fr 1fr 1fr;
+  gap: 30px; 
+  margin: 20px 200px;
 }
