--- a/src/Components/card/Card.css
+++ b/src/Components/card/Card.css
@@ -1,14 +1,20 @@
 .card{
-  width: 100%; 
+ width: 100%;  /* para ocupar todo o espaço do grid */
+  min-width: 90px; /* tamanho mínimo */
   border: 1px solid rgb(212, 212, 212);
   border-radius: 20px;
   margin-bottom: 20px;
+  background-color: aqua;
+  box-sizing: border-box;
+
 }
 
 .card > img{
-  width: 100%;
+   
+width: 100%;
   height: auto;
   border-radius: 20px 20px 0 0; 
+  display: block;
 }
 
 .card > h5{
