--- a/src/Components/menu/Menu.css
+++ b/src/Components/menu/Menu.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0px 40px
 }
 
 #search{
@@ -43,6 +44,7 @@
   display: flex;
   background-color: #ffffff;
   width: 100%;
+  padding: 0px 40px
 }
 
 #menu button {
