--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
   margin: 0px;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 #body{
   margin-top: 10px;
   font-family: "Figtree", sans-serif;
