--- a/src/Components/card/Card.css
+++ b/src/Components/card/Card.css
@@ -1,18 +1,47 @@
-.card{
- width: 100%;  /* para ocupar todo o espaço do grid */
-  min-width: 90px; /* tamanho mínimo */
+/* .card{
   border: 1px solid rgb(212, 212, 212);
   border-radius: 20px;
   margin-bottom: 20px;
-  background-color: aqua;
   box-sizing: border-box;
 
 }
 
 .card > img{
    
-width: 100%;
+width: 400px;            
   height: auto;
+  border-radius: 20px 20px 0 0; 
+  display: block;
+}
+
+.card > h5{
+  padding: 10px;
+  font-size: 15px;
+}
+
+.card > h4{
+  padding: 0px 10px;
+  margin-bottom: 50px;
+  font-size: 15px;
+  color: #475569;
+  font-weight: 300;
+
+} */
+
+.card{
+ width: 100%;  /* para ocupar todo o espaço do grid */
+  min-width: 90px; /* tamanho mínimo */
+  border: 1px solid rgb(212, 212, 212);
+  border-radius: 20px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+
+}
+
+.card > img{
+  width: 100%;
+  height: 250px;
+  object-fit: cover; /* "corta imagem" */
   border-radius: 20px 20px 0 0; 
   display: block;
 }
