--- a/src/Components/menu/Menu.css
+++ b/src/Components/menu/Menu.css
@@ -42,9 +42,13 @@
 
 #menu {
   display: flex;
+overflow-x: auto;  
   background-color: #ffffff;
   width: 100%;
-  padding: 0px 40px
+  padding: 0px 40px;
+overflow-y: hidden;
+ box-sizing: border-box;
+    white-space: nowrap;
 }
 
 #menu button {
@@ -59,6 +63,7 @@
   white-space: nowrap;  
   transition: color 0.3s ease; /* Animação suave na troca de cor */
   color: #333;
+  flex-shrink: 0;   
 }
 
 #menu button:hover {
